Added model package

--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>client-db</artifactId>
+    <artifactId>clientEntity-db</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>client-db</name>
+    <name>clientEntity-db</name>
     <description>Demo project for Spring Boot</description>
 
     <parent>
